--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 *.ipynb_checkpoints
 anaconda_projects/
 *.jpg
+app/backend/utlis/__pycache__/
 *.ipynb
 app/__pycache__
 app/backend/__pycache__ 
 app/backend/routers/__pycache__ 
+app/logs.txt
 
