--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,7 @@ app/__pycache__
 app/backend/__pycache__ 
 app/backend/routers/__pycache__ 
 app/logs.txt
+/cropped_faces/
+/enhanced_faces/
+app/logs.txt
 
