--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,13 @@
+app/backend/utlis/__pycache__/
+app/__pycache__/
+app/backend/__pycache__/
+app/backend/routers/__pycache__/
+__pycache__/
 *.ipynb_checkpoints
 anaconda_projects/
-*.jpg
-app/backend/utlis/__pycache__/
-*.ipynb
-app/__pycache__
-app/backend/__pycache__ 
-app/backend/routers/__pycache__ 
-app/logs.txt
 /cropped_faces/
 /enhanced_faces/
-app/logs.txt
-__pycache__
+*.jpg
+*.ipynb
 logs.txt
 .dockerignore
-dockerfile
